kubernetes-manifests/microservices-demo/overlays/test/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - kind: Gateway
      namespace: gateway
      name: gateway
      sectionName: https
  hostnames:
    - microservices-demo-frontend.gogke-test-7.damlys.pl
  rules:
    - backendRefs:
        - name: frontend
          port: 80

---
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: frontend
spec:
  targetRef:
    group: ""
    kind: Service
    name: frontend
  default:
    config:
      type: HTTP
      httpHealthCheck:
        port: 8080
        requestPath: /_healthz
