kubernetes-manifests/microservices-demo/overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-demo
  labels:
    istio-injection: "enabled" # or "disabled"
